fix: mobile responsivity

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                     c0-65.543,53.754-118.867,119.826-118.867c66.064,0,119.812,53.324,119.812,118.867
                                     C276.546,215.678,222.799,268.994,156.734,268.994z"/>
                             </svg>
-                            Entre em contato
+                            Quero participar do ApolloTeam!
                         </a>
                 </div>
 
