fix: scrow down

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         </div>
 
         <div class="s-hero__scroll">
-            <a href="#about" class="s-hero__scroll-link smoothscroll">
-                Scroll Down
+            <a href="#consultoria" class="s-hero__scroll-link smoothscroll">
+                Deslize Para Baixo
             </a>
         </div>
 
