feat: new phone number

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </ul>
             </nav> <!-- end s-header__nav-wrap -->
 
-            <a href="https://wa.me/5511999466188" class="btn btn--primary  btn--whats btn--small">
+            <a href="https://api.whatsapp.com/send?phone=5511994917359" class="btn btn--primary  btn--whats btn--small">
                 <svg fill="#FFF" height="24px" width="24px"  version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 308 308" xml:space="preserve">
                     <path id="XMLID_469_" d="M227.904,176.981c-0.6-0.288-23.054-11.345-27.044-12.781c-1.629-0.585-3.374-1.156-5.23-1.156
                         c-3.032,0-5.579,1.511-7.563,4.479c-2.243,3.334-9.033,11.271-11.131,13.642c-0.274,0.313-0.648,0.687-0.872,0.687
@@ -115,7 +115,7 @@
                     Reais com Treinos Personalizados e <br>  
                     Acompanhamento Dedicado<br>
                     </p>
-                        <a href="https://wa.me/5511999466188" class="btn btn--primary  btn--whats btn--small">
+                        <a href="https://api.whatsapp.com/send?phone=5511994917359" class="btn btn--primary  btn--whats btn--small">
                             <svg fill="#FFF" height="24px" width="24px"  version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 308 308" xml:space="preserve">
                                 <path id="XMLID_469_" d="M227.904,176.981c-0.6-0.288-23.054-11.345-27.044-12.781c-1.629-0.585-3.374-1.156-5.23-1.156
                                     c-3.032,0-5.579,1.511-7.563,4.479c-2.243,3.334-9.033,11.271-11.131,13.642c-0.274,0.313-0.648,0.687-0.872,0.687
@@ -301,7 +301,7 @@
         <div class="row h-text-center">
             <div class="column">
 
-                <a href="https://wa.me/5511999466188" class="btn--act">
+                <a href="https://api.whatsapp.com/send?phone=5511994917359" class="btn--act">
                     <svg class="min-whats-svg" fill="#FFF" height="60px" width="60px"  version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 308 308" xml:space="preserve">
                         <path id="XMLID_469_" d="M227.904,176.981c-0.6-0.288-23.054-11.345-27.044-12.781c-1.629-0.585-3.374-1.156-5.23-1.156
                             c-3.032,0-5.579,1.511-7.563,4.479c-2.243,3.334-9.033,11.271-11.131,13.642c-0.274,0.313-0.648,0.687-0.872,0.687
@@ -343,7 +343,7 @@
                 <div class="row">
                     <div class="column large-7 tab-12 s-footer__block">
                         <h4 class="h6">Encontre a gente</h4>
-                        <a href="tel:+55 11 95244-7266">+55 11 95244-7266</a>
+                        <a href="tel:+55 11 99491-7359">+55 11 99491-7359</a>
                         <a href="mailto:apolloteam.consultoria@gmail.com">apolloteam.consultoria@gmail.com</a>
                         </p>
                     </div>
